--- a/style.css
+++ b/style.css
@@ -1,8 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&family=PT+Sans:wght@400;700&display=swap");
 
-/* font-family: 'PT Sans', sans-serif;
-font-family: 'PT Sans', sans-serif; */
-
 * {
   box-sizing: border-box;
   padding: 0;
@@ -49,4 +46,15 @@ p {
 
 img {
   width: 100%;
+}
+
+/* Header */
+#main-header {
+  height: 90vh;
+}
+
+#main-header .container {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 5fr;
 }
