--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: "Lora", serif;
   font-weight: 400;
-  color: black;
+  color: var(--neutral-black);
   background: #f2f2f2;
   line-height: 1.5;
 }
@@ -50,11 +50,49 @@ img {
 
 /* Header */
 #main-header {
-  height: 90vh;
+  height: 100vh;
+  background: linear-gradient(90deg, #0b4b40 70%, #1fc567 30%);
+  /* overflow: hidden; */
 }
 
 #main-header .container {
   display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-template-rows: 1fr 5fr;
+  position: relative;
+  grid-template-columns: 7fr 3fr;
+}
+
+#main-header .container .left-container {
+  display: flex;
+  flex-direction: column;
+}
+
+#main-header .container .floating-hero {
+  z-index: 5;
+  position: absolute;
+  background: url(./images/law-statue.jpg) no-repeat center center/cover;
+  top: 80%;
+  left: 50%;
+  width: 500px;
+  height: 500px;
+  border: 3px solid var(--neutral-white);
+}
+
+#main-header .container .floating-hero::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #35353577;
+}
+
+/* Ratings */
+#rating-highlight {
+  height: 80px;
+  background: var(--accent-200);
+}
+
+#rating-highlight .container {
+  display: flex;
 }
