--- a/style.css
+++ b/style.css
@@ -86,6 +86,10 @@ img {
   color: var(--neutral-white);
 }
 
+#main-header .container .left-container .left-container-nav a:hover:not(.logo) {
+  border-bottom: 1px solid var(--primary-100);
+}
+
 #main-header .container .left-container .left-container-content {
   padding-top: 40px;
   margin-top: 60px;
@@ -145,4 +149,33 @@ img {
 
 #rating-highlight .container p {
   padding-top: 15px;
+}
+
+/* Services */
+#services {
+  background: #e6f4e7;
+}
+.service-card {
+  padding: 40px 12px;
+  height: 300px;
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  border-radius: 6px;
+  background: var(--neutral-white);
+}
+
+.service-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+#services .services-content .services-cards {
+  display: grid;
+  padding: 10px 60px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 20px;
 }
