--- a/utilities.css
+++ b/utilities.css
@@ -3,6 +3,7 @@
   --neutral-white: #faf8f6;
   --primary-color: #1fc567;
   --neutral-black: #111517;
+  --neutral-grey: #3a4144;
   --accent-100: #005384;
   --accent-200: #e7f0f2;
 
@@ -38,6 +39,12 @@
 .btn-dark,
 .bg-dark {
   background: var(--primary-400);
+  color: var(--neutral-white);
+}
+
+.btn-accent,
+.bg-accent {
+  background: var(--accent-100);
   color: var(--neutral-white);
 }
 
@@ -113,4 +120,39 @@
 
 .flex-columns p {
   margin: 20px 0;
+}
+
+.flex-items {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100%;
+  justify-content: space-between;
+}
+
+/* .flex-items > div {
+  padding: 20px;
+  height: 200px;
+  width: 200px;
+} */
+
+/* Section Header */
+.section-header {
+  display: flex;
+  padding: 20px 10px 6px;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.section-header h2 {
+  font-size: 40px;
+  margin: 10px;
+}
+
+.section-padding {
+  padding: 20px 20px 40px;
+  margin-bottom: 100px;
 }
