--- a/utilities.css
+++ b/utilities.css
@@ -16,6 +16,16 @@
   --max-width: 1100px;
 }
 
+.py-1 {
+  padding: 1.5rem 0;
+}
+.py-2 {
+  padding: 2rem 0;
+}
+.py-3 {
+  padding: 3rem 0;
+}
+
 /* Buttons & Backgrounds */
 .btn {
   cursor: pointer;
