--- a/style.css
+++ b/style.css
@@ -199,13 +199,18 @@ img {
 /* Cards */
 .team-card {
   padding: 40px 12px;
-  height: 400px;
-  width: 400px;
+  height: 500px;
+  width: 300px;
   gap: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+}
+
+.team-card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .team-card img {
