--- a/style.css
+++ b/style.css
@@ -337,7 +337,7 @@ img {
 }
 
 #contact .form-container .form-container-white .form-inputs h3 {
-  margin: 8px 10px 6px;
+  margin: 8px 20px 6px;
 }
 
 #contact .form-container .form-container-white .form-inputs > div .grid-form {
@@ -345,23 +345,31 @@ img {
   grid-template-columns: repeat(9, auto);
   grid-template-rows: repeat(7, auto);
   gap: 8px;
+  padding: 20px;
 }
 
 #contact .form-container .form-container-white #name {
   grid-row: 1 / span 1;
   grid-column: 1 / span 3;
+  height: 44px;
+  border-radius: 4px;
 }
 #contact .form-container .form-container-white #email {
   grid-row: 2 / span 1;
   grid-column: 1 / span 3;
+  height: 44px;
+  border-radius: 4px;
 }
 #contact .form-container .form-container-white #phone {
   grid-row: 3 / span 1;
   grid-column: 1 / span 3;
+  height: 44px;
+  border-radius: 4px;
 }
 #contact .form-container .form-container-white #text-area {
   grid-row: 1 / span 3;
   grid-column: 5 / span 5;
+  border-radius: 4px;
 }
 #contact .form-container .form-container-white #button-title {
   grid-row: 4 / span 1;
@@ -375,6 +383,8 @@ img {
   .form-input-services {
   grid-row: 5 / span 1;
   grid-column: 1 / span 9;
+  display: flex;
+  flex-direction: row;
 }
 
 #contact .form-container .form-container-white .form-inputs #submit {
@@ -392,3 +402,9 @@ img {
 /* #contact .form-container textarea {
   height: 140px;
 } */
+
+#contact .form-container .form-container-white .form-input-services > input {
+  /* padding: 6px 10px 6px; */
+  border-radius: 4px;
+  margin-right: 80px;
+}
