--- a/style.css
+++ b/style.css
@@ -280,7 +280,6 @@ img {
 }
 .main-b {
   grid-area: main;
-  /* overflow-x: hidden; */
 }
 
 .footer-b {
@@ -289,7 +288,6 @@ img {
 
 #contact-page .header-b {
   height: 12vh;
-  /* padding-bottom: 20px; */
 }
 
 /* Form */
@@ -331,6 +329,7 @@ img {
   justify-content: space-around;
   margin-top: 20px;
   margin-bottom: 20px;
+  flex-wrap: wrap;
 }
 
 #contact .form-container .form-container-white .form-inputs {
@@ -388,6 +387,7 @@ img {
   display: flex;
   flex-direction: row;
   margin-bottom: 2px;
+  justify-content: space-between;
 }
 
 #contact .form-container .form-container-white .form-inputs #submit {
@@ -395,25 +395,11 @@ img {
   grid-column: 4 / span 2;
 }
 
-/* #contact .form-container input {
-  width: 160px;
-  height: 40px;
-  border-radius: 6px;
-  margin: 10px 10px 20px;
-} */
-
-/* #contact .form-container textarea {
-  height: 140px;
-} */
 
 #contact .form-container .form-container-white .form-input-services > input {
-  /* padding: 6px 10px 6px; */
   border-radius: 4px;
   border-color: transparent;
-  margin-right: 80px;
 }
-
-/* #contact .form-container .form-container-white .grid-form textarea {} */
 
 #contact
   .form-container
@@ -422,4 +408,15 @@ img {
   > input:hover {
   color: var(--accent-100);
   border-color: var(--primary-400);
+}
+
+/* Tablet Responsiveness */
+@media (max-width: 900px) {
+  #main-header .container .floating-hero {
+    display: none;
+  }
+}
+
+@media (max-width: 500px) {
+
 }
