--- a/style.css
+++ b/style.css
@@ -395,7 +395,6 @@ img {
   grid-column: 4 / span 2;
 }
 
-
 #contact .form-container .form-container-white .form-input-services > input {
   border-radius: 4px;
   border-color: transparent;
@@ -417,6 +416,24 @@ img {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 640px) {
+  #services .services-content .services-cards {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+  }
 
+  /* contact page */
+  .section-padding-2 {
+    padding: 20px 0 10px;
+  }
+
+  #contact .form-container {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  #contact .form-container .form-container-white {
+    margin: 0px;
+  }
 }
