--- a/utilities.css
+++ b/utilities.css
@@ -60,9 +60,15 @@
 
 .btn-light,
 .bg-light {
-  color: var(--neutral-black);
-  background: var(--accent-200);
-  border: 0.5px solid var(--accent-100);
+  color: var(--neutral-white);
+  background: var(--accent-100);
+  border: 0.5px solid var(--accent-200);
+  transition: 0.5s ease;
+}
+
+.btn-light:hover {
+  scale: 0.92;
+  color: var(--neutral-white) !important;
 }
 
 /* Text */
